-구글 로그인 (오류 있음) -StartActivity에서 인증이 성공하면 Main으로 넘어가게 설계했음 (인증이 안되서 Main으로 못넘어 가고 있다)
in Mainactivity
 - tab 별로 다른 root로 접근
 - 아직 firebase 접근해서 data 읽어 오진 못함
 - 읽어온 data들 뿌려줄 list view작성
 - inflater로 생성한 각각의 list 레이아웃에 button에 tag와 함께 묶어서 저장
 (생화학연구실에서의 '자세히'버튼과 바이러스학 연구실 또는 기초과학연구소의 '자세히' 버튼과 구분하기 위해)

 firebase
 -데이타배이스 구축함
 -sort 해서 검색하는 기능이 있다는데 아직 사용하지 못하겠음

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -94,7 +94,7 @@
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="킹고 인증"
+            android:text="1.킹고 인증"
             android:textSize="20dp"/>
 
 
@@ -148,22 +148,25 @@
 
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/editText3"
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@null"
-            android:ems="15"
-            android:inputType="text"
-            android:text="" />
+            android:text="2.구글 인증"
+            android:textSize="20dp"/>
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/authbutton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></com.google.android.gms.common.SignInButton>
+
 
         <TextView
             android:id="@+id/textView11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="15dp"
-            android:text="인증번호가 도착하지 않은 경우,\n보내기 버튼을 다시 눌러주세요"
+            android:text="1 또는 2로 인증해주세요.\n인증번호가 도착하지 않은 경우,\n보내기 버튼을 다시 눌러주세요"
             android:textSize="15dp"/>
 
 
