--- a/app/src/main/res/layout/custom_bar_insti.xml
+++ b/app/src/main/res/layout/custom_bar_insti.xml
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="기초 과학 연구원"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
+        android:background="#87CEEB"
         android:id="@+id/institute_actionbar"
         android:textSize="25dp"
         tools:ignore="HardcodedText,SpUsage" />
