--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,99 +16,83 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="1">
 
-                <TabWidget
-                    android:id="@android:id/tabs"
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <!--첫번째 내용물-->
+                <LinearLayout
+                    android:id="@+id/content1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                <FrameLayout
-                    android:id="@android:id/tabcontent"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <!--첫번째 내용물-->
-                    <LinearLayout
-                        android:id="@+id/content1"
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:gravity="center"
+                        android:text="생명과학과 Lab 목록"
+                        android:textSize="20dp"
+                        tools:ignore="HardcodedText,SpUsage" />
 
-                        <TextView
+                    <ScrollView
+                        android:id="@+id/scrollView1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fillViewport="true">
+                        <!--scrollview 안에 내용물 여기에 넣기-->
+                        <ListView
+                            android:id="@+id/listview1"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="생명과학과 Lab 목록"
-                            android:textSize="20dp"
-                            android:gravity="center"
-                            tools:ignore="HardcodedText,SpUsage" />
+                            android:layout_height="wrap_content">
 
-                        <ScrollView
-                            android:id="@+id/scrollView1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                            <!--scrollview 안에 내용물 여기에 넣기-->
-                            <LinearLayout
-                                android:id="@+id/scrollcontent1"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <Button
-                                    android:id="@+id/button4"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_vertical|center_horizontal"
-                                    android:onClick="onbutton4Clicked"
-                                    android:text="자세히"
-                                    tools:ignore="HardcodedText" />
+                        </ListView>
 
 
+                    </ScrollView>
+                </LinearLayout>
+                <!--두번째 내용물-->
+                <LinearLayout
+                    android:id="@+id/content2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                            </LinearLayout>
-
-                        </ScrollView>
-                    </LinearLayout>
-                    <!--두번째 내용물-->
-                    <LinearLayout
-                        android:id="@+id/content2"
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:gravity="center"
+                        android:text="Big 5 생명과학 연구소"
+                        android:textSize="20dp"
+                        tools:ignore="HardcodedText,SpUsage" />
 
-                        <TextView
+                    <ScrollView
+                        android:id="@+id/scrollView2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fillViewport="true">
+                        <!--scrollview 안에 내용물 여기에 넣기-->
+
+                        <ListView
+                            android:id="@+id/listview2"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Big 5 생명과학 연구소"
-                            android:textSize="20dp"
-                            android:gravity="center"
-                            tools:ignore="HardcodedText,SpUsage" />
+                            android:layout_height="wrap_content">
 
-                        <ScrollView
-                            android:id="@+id/scrollView2"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                            <!--scrollview 안에 내용물 여기에 넣기-->
-                            <LinearLayout
-                                android:id="@+id/scrollviewcontent2"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <Button
-                                    android:id="@+id/button5"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="자세히"
-                                    android:onClick="onbutton5Clicked"
-                                    tools:ignore="HardcodedText" />
-
-                            </LinearLayout>
-                        </ScrollView>
+                        </ListView>
+                    </ScrollView>
 
 
-                    </LinearLayout>
-                </FrameLayout>
+                </LinearLayout>
+            </FrameLayout>
         </LinearLayout>
     </TabHost>
 
