--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
-            android:text="TextView"
+            android:text=""
             android:textSize="20dp"
             android:textColor="#ffffff"
             android:layout_weight="1"/>
@@ -30,10 +30,10 @@
             android:paddingRight="10dp"
             android:paddingTop="10dp"
             android:gravity="end"
-            android:text="TextView"
+            android:text=""
             android:textSize="20dp"
             android:textColor="#ffffff"
-            android:layout_weight="1" >
+            android:layout_weight="3" >
         </TextView>
 
 
@@ -51,7 +51,7 @@
             android:gravity="left"
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
-            android:text="TextView"
+            android:text=""
             android:textSize="20dp"
             android:textColor="#ffffff"
             android:layout_weight="3"/>
